Sync updates for 5060ti

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 data/
 dataset/
 cached_data/
-clip_datasets/
 optuna/
 sldc_logs_raoxuan/
 sldc_logs_simian_domainnet/
@@ -11,6 +10,7 @@ ZSCL零样本评估demo/
 SubspaceLoRA_ZSCL_seperation/
 pretrained_models/
 moco
+x_tail_data/
 
 # 忽略所有 .zip 和 .csv 文件
 *.zip
